--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-image: url('nature-tranquil-scene-silhouette-pine-tree-generative-ai_188544-12777 (1).jpg');
+    background-image: url('ps52754-8mistoverthetreetops50x70.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
