--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@ body {
     padding: 0;
     text-align: center;
     color: white;
-    background: linear-gradient(to right, black, purple), 
-                url('ps52754-8mistoverthetreetops50x70.jpg') no-repeat center center/cover;
-    background-blend-mode: overlay;
+    background: url('ps52754-8mistoverthetreetops50x70.jpg') no-repeat center center/cover;
     background-attachment: fixed;
 }
